Bug 1523633: Use guardIsNumber in GetPropIRGenerator::tryAttachPrimitive to properly handle int32 values. r=anba