js/src/jit/CacheIR.cpp
@@ -1465,28 +1465,25 @@ GetPropIRGenerator::tryAttachModuleNamespace(HandleObject obj, ObjOperandId objI
 bool
 GetPropIRGenerator::tryAttachPrimitive(ValOperandId valId, HandleId id)
 {
-    JSValueType primitiveType;
-    RootedNativeObject proto(cx_);
+    JSProtoKey protoKey;
     if (val_.isString()) {
         if (JSID_IS_ATOM(id, cx_->names().length)) {
             // String length is special-cased, see js::GetProperty.
             return false;
         }
-        primitiveType = JSVAL_TYPE_STRING;
-        proto = MaybeNativeObject(cx_->global()->maybeGetPrototype(JSProto_String));
+        protoKey = JSProto_String;
     } else if (val_.isNumber()) {
-        primitiveType = JSVAL_TYPE_DOUBLE;
-        proto = MaybeNativeObject(cx_->global()->maybeGetPrototype(JSProto_Number));
+        protoKey = JSProto_Number;
     } else if (val_.isBoolean()) {
-        primitiveType = JSVAL_TYPE_BOOLEAN;
-        proto = MaybeNativeObject(cx_->global()->maybeGetPrototype(JSProto_Boolean));
+        protoKey = JSProto_Boolean;
     } else if (val_.isSymbol()) {
-        primitiveType = JSVAL_TYPE_SYMBOL;
-        proto = MaybeNativeObject(cx_->global()->maybeGetPrototype(JSProto_Symbol));
+        protoKey = JSProto_Symbol;
     } else {
         MOZ_ASSERT(val_.isNullOrUndefined() || val_.isMagic());
         return false;
     }
+
+    RootedObject proto(cx_, cx_->global()->maybeGetPrototype(protoKey));
     if (!proto)
         return false;
 
@@ -1504,7 +1501,11 @@ GetPropIRGenerator::tryAttachPrimitive(ValOperandId valId, HandleId id)
             EnsureTrackPropertyTypes(cx_, holder, id);
     }
 
-    writer.guardType(valId, primitiveType);
+    if (val_.isNumber()) {
+        writer.guardIsNumber(valId);
+    } else {
+        writer.guardType(valId, val_.extractNonDoubleType());
+    }
     maybeEmitIdGuard(id);
 
     ObjOperandId protoId = writer.loadObject(proto);
